<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:title="@string/DrawerNavMenu000">
        <menu>
            <group
                android:id="@+id/menu_top"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/homeFragment"
                    android:title="@string/DrawerNavMenu001"
                    app:showAsAction="ifRoom" />
                <item
                    android:id="@+id/searchFragment2"
                    android:title="@string/DrawerNavMenu002"
                    app:showAsAction="ifRoom" />
                <item
                    android:id="@+id/profileFragment"
                    android:title="@string/DrawerNavMenu003"
                    app:showAsAction="ifRoom" />
            </group>
        </menu>
    </item>
    <item
        android:id="@id/studyFragment"
        android:title="@string/DrawerNavMenu004" />
    <item
        android:id="@+id/login"
        android:title="@string/DrawerNavMenu005"
        app:showAsAction="always" />
    <item
        android:id="@+id/logout"
        android:title="@string/DrawerNavMenu006"
        app:showAsAction="always" />
</menu>